# wasmer-upgrading

./: .gitignore  Cargo.toml  Makefile
.devcontainer/: devcontainer.json
app/: Cargo.toml
app/src/: app.rs  host_adapter.rs  imports.rs  main.rs  vm_manual.rs  wasm_cache.rs
wasm/: Cargo.toml
wasm/src/: http.rs  main.rs  raw.rs
wasmer3/: Cargo.toml
wasmer3/src/: imports.rs  main.rs  vm_manual.rs  wasm_cache.rs  worker.rs
wasmer4/: Cargo.toml
wasmer4/src/: errors.rs  wasm_cache.rs
