cargo-features = ["per-package-target"]

[workspace]
resolver = "2"
default-members = ["app"]
members = [
    "app",
    "wasm"
]

[workspace.package]
rust-version = "1.66.1"
version = "0.0.1-rc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
async-trait = "0.1"
actix = "0.13"
anyhow = "1.0.75"
tokio = "1.34.0"
wasmer = "4.2.3"
wasmer-wasix = "0.16"
serde = "1.0"
serde_json = "1.0"
parking_lot = "0.12"
hex = "0.4"
sha3 = "0.10.8"
reqwest = "0.11"
thiserror = "1.0"