[package]
name = "app"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
actix = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
wasmer = { workspace = true }
wasmer-wasix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true } 
hex = { workspace = true }
sha3 = { workspace = true }