[package]
name = "wasmer3"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
actix = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

# wasmer 3.3.0
wasmer = { git = "https://github.com/wasmerio/wasmer.git", rev = "3c7c4a803e59d380ea969baa3f032598e41a1bcb", default-features = true }
wasmer-wasix = { git = "https://github.com/wasmerio/wasmer.git", rev = "3c7c4a803e59d380ea969baa3f032598e41a1bcb", default-features = true }


serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true } 
hex = { workspace = true }
sha3 = { workspace = true }